# serializer version: 1
# name: test_registry[05.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '05.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2405',
    'model_id': 'DS2405',
    'name': '05.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[10.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '10.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS18S20',
    'model_id': 'DS18S20',
    'name': '10.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[12.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '12.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2406',
    'model_id': 'DS2406',
    'name': '12.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[1D.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '1D.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2423',
    'model_id': 'DS2423',
    'name': '1D.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': <ANY>,
  })
# ---
# name: test_registry[1F.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '1F.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2409',
    'model_id': 'DS2409',
    'name': '1F.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[20.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '20.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2450',
    'model_id': 'DS2450',
    'name': '20.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[22.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '22.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS1822',
    'model_id': 'DS1822',
    'name': '22.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[26.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '26.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2438',
    'model_id': 'DS2438',
    'name': '26.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[28.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '28.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS18B20',
    'model_id': 'DS18B20',
    'name': '28.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[28.222222222222-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '28.222222222222',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS18B20',
    'model_id': 'DS18B20',
    'name': '28.222222222222',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '222222222222',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[28.222222222223-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '28.222222222223',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS18B20',
    'model_id': 'DS18B20',
    'name': '28.222222222223',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '222222222223',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[29.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '29.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2408',
    'model_id': 'DS2408',
    'name': '29.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[30.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '30.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2760',
    'model_id': 'DS2760',
    'name': '30.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[3A.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '3A.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2413',
    'model_id': 'DS2413',
    'name': '3A.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[3B.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '3B.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS1825',
    'model_id': 'DS1825',
    'name': '3B.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[42.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '42.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS28EA00',
    'model_id': 'DS28EA00',
    'name': '42.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[7E.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '7E.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Embedded Data Systems',
    'model': 'EDS0068',
    'model_id': 'EDS0068',
    'name': '7E.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[7E.222222222222-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        '7E.222222222222',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Embedded Data Systems',
    'model': 'EDS0066',
    'model_id': 'EDS0066',
    'name': '7E.222222222222',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '222222222222',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[A6.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        'A6.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Maxim Integrated',
    'model': 'DS2438',
    'model_id': 'DS2438',
    'name': 'A6.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[EF.111111111111-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        'EF.111111111111',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Hobby Boards',
    'model': 'HobbyBoards_EF',
    'model_id': 'HobbyBoards_EF',
    'name': 'EF.111111111111',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111111',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[EF.111111111112-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        'EF.111111111112',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Hobby Boards',
    'model': 'HB_MOISTURE_METER',
    'model_id': 'HB_MOISTURE_METER',
    'name': 'EF.111111111112',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111112',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
# name: test_registry[EF.111111111113-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'onewire',
        'EF.111111111113',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Hobby Boards',
    'model': 'HB_HUB',
    'model_id': 'HB_HUB',
    'name': 'EF.111111111113',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '111111111113',
    'suggested_area': None,
    'sw_version': '3.2',
    'via_device_id': None,
  })
# ---
